@@ -1,6 +1,11 @@
 $Id$
 
 2009-06-29  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+	* debugger.py gdb.py simple.py: Remove the following methods from the
+	netbeans api and the Debugger class: cmd_dbgvar, cmd_delvar,
+	cmd_sigint and cmd_symcompletion.
+	* buffer.py gdb.py misc.py netbeans.py vim.py: Replace assert with
+	exceptions in BufferSet.
 	* all files: Clean up the python debugger interface and use pydoc to
 	document it.
 	* setup.py: The Fedora Core 9 distribution is missing the Python
